# elfdeps

./: README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  pypi.yaml
src/elfdeps/: __init__.py  __main__.py  _archives.py  _elfdeps.py  _fileinfo.py
tests/: test_elfdeps.py  test_main.py
